# wareboxes

./: .env.example  .gitignore  Cargo.toml  README.md  ROADMAP.md  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml  site.yml
crates/barcodes/: Cargo.toml
crates/barcodes/src/: lib.rs
crates/client/: Cargo.toml  index.html
crates/client/src/: api.rs  app.rs  main.rs
crates/client/src/app/: components.rs  loads.rs  operations.rs  panels.rs  theme.rs  workspaces.rs
crates/core/: Cargo.toml
crates/core/src/: dto.rs  error.rs  lib.rs  models.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: auth.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  permissions.rs  request_context.rs  state.rs
crates/server/src/repo/: access.rs  accounts.rs  address.rs  audits.rs  employees.rs  facilities.rs  idempotency.rs  inventory.rs  inventory_journal.rs  inventory_owners.rs  items.rs  license_plates.rs  loads.rs  locations.rs  mod.rs  orders.rs  outbox.rs  permissions.rs  roles.rs  settings.rs  tasks.rs  tenants.rs  users.rs  warehouses.rs
crates/server/src/repo/tasks/: execution.rs  leasing.rs  queries.rs  references.rs
crates/server/src/routes/: accounts.rs  audits.rs  auth.rs  employees.rs  facilities.rs  inventory.rs  inventory_owners.rs  items.rs  license_plates.rs  loads.rs  locations.rs  mod.rs  orders.rs  permissions.rs  roles.rs  tasks.rs  users.rs  warehouses.rs
crates/server/tests/: activity.rs  activity_rls.rs  api_contract.rs  audit_scopes.rs  auth.rs  dimension_scopes.rs  employee_scopes.rs  integration.rs  inventory.rs  inventory_scopes.rs  items.rs  license_plate_scopes.rs  loads.rs  operational_scopes.rs  operations_scope.rs  order_idempotency.rs  order_tracking_rls.rs  orders.rs  outbox.rs  references.rs  reservation_rls.rs  scopes.rs  task_detail_rls.rs  task_idempotency.rs  task_rls.rs  task_scopes.rs  tasks.rs  tenant_rls.rs  tenants.rs
crates/server/tests/common/: mod.rs
deploy/: Caddyfile  postgres.compose.yml  provision.sh  wareboxes-deploy  wareboxes.service
deploy/postgres-init/: 001-create-app-role.sh
docs/: engineering-notes.md
migrations/postgres/: 0001_init.sql  0002_remaining.sql  0003_user_settings.sql  0004_order_tracking_numbers.sql  0005_item_packaging_barcode_constraints.sql  0006_barcode_type_gs1_upc.sql  0007_barcode_active_uniqueness.sql  0008_inventory_location_lot_expiration_guard.sql  0009_reservation_balance_target.sql  0010_item_pack_links.sql  0011_work_tasks.sql  0012_outbox_events.sql  0013_work_task_scopes.sql  0014_inventory_audit_scopes.sql  0015_employee_facility_invariant.sql  0016_command_idempotency_metadata.sql  0017_command_idempotency_rls.sql  0018_inventory_journal_rls.sql  0019_license_plate_rls.sql  0020_activity_rls.sql  0021_work_task_rls.sql  0022_task_detail_rls.sql  0023_inventory_reservation_rls.sql  0024_order_tracking_rls.sql
scripts/: build-site.sh  clean-docker.sh  dev.sh  reset-db.sh  run-client-demo.sh  seed-inventory.sh  seed-loads.sh  seed-orders.sh  test-postgres.sh
site/: index.html  style.css
