[workspace]
resolver = "2"
members = ["crates/core", "crates/server", "crates/client", "crates/barcodes"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.78"

[workspace.dependencies]
wareboxes-core = { path = "crates/core" }
wareboxes-barcodes = { path = "crates/barcodes" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"

[profile.release]
opt-level = 3
lto = "thin"
