[package]
name = "wareboxes-client"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Wareboxes WMS desktop/web client (eframe + egui)"

[[bin]]
name = "wareboxes-client"
path = "src/main.rs"

[dependencies]
wareboxes-domain = { workspace = true }
wareboxes-core = { workspace = true }
wareboxes-barcodes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

eframe = { version = "0.27", default-features = false, features = [
    "default_fonts",
    "glow",
] }
egui = "0.27"
egui_extras = "0.27"
ehttp = "0.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
