[package]
name = "wareboxes-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Shared domain models, DTOs and validation for the Wareboxes WMS (server + client contract)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
validator = { version = "0.18", features = ["derive"] }
